--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "grunt": ">=1.5.2"
   },
   "dependencies": {
-    "shescape": "^1.5.4"
+    "shescape": "^1.5.4",
+    "semver": "^7.3.7"
   },
   "engines": {
     "node": ">=14"
